--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[299894 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "[297351 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "[299894 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "[299894 rows x 14 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,122 +1299,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sequential\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Conv2D\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlayers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MaxPool2D\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
-   "source": [
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D\n",
-    "from tensorflow.keras.layers import MaxPool2D\n",
-    "from tensorflow.keras.layers import Flatten\n",
-    "from tensorflow.keras.layers import Dropout\n",
-    "from tensorflow.keras.layers import Dense\n",
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'keras' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/tinas/Documents/machine learning challenege/challenge.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model \u001b[39m=\u001b[39m keras\u001b[39m.\u001b[39mmodels\u001b[39m.\u001b[39mSequential([\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mConv2D(\u001b[39m32\u001b[39m, (\u001b[39m3\u001b[39m, \u001b[39m3\u001b[39m), activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m, input_shape \u001b[39m=\u001b[39m [\u001b[39m4000\u001b[39m, \u001b[39m4000\u001b[39m,\u001b[39m3\u001b[39m]),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mMaxPooling2D(),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mConv2D(\u001b[39m64\u001b[39m, (\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m), activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mMaxPooling2D(),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mConv2D(\u001b[39m64\u001b[39m, (\u001b[39m2\u001b[39m, \u001b[39m2\u001b[39m), activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mFlatten(),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mDense(\u001b[39m100\u001b[39m, activation\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mrelu\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     keras\u001b[39m.\u001b[39mlayers\u001b[39m.\u001b[39mDense(\u001b[39m2\u001b[39m, activation \u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39msoftmax\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X15sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m ])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'keras' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "model = keras.models.Sequential([\n",
-    "    keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape = [4000, 4000,3]),\n",
-    "    keras.layers.MaxPooling2D(),\n",
-    "    keras.layers.Conv2D(64, (2, 2), activation='relu'),\n",
-    "    keras.layers.MaxPooling2D(),\n",
-    "    keras.layers.Conv2D(64, (2, 2), activation='relu'),\n",
-    "    keras.layers.Flatten(),\n",
-    "    keras.layers.Dense(100, activation='relu'),\n",
-    "    keras.layers.Dense(2, activation ='softmax')\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='adam',\n",
-    "             loss = 'binary_crossentropy',\n",
-    "             metrics=['accuracy'])\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(outputs, labels):\n",
+    "    _, preds = torch.max(outputs, dim=1)\n",
+    "    return torch.tensor(torch.sum(preds == labels).item() / len(preds))\n",
     "\n",
-    "callback = keras.callbacks.EarlyStopping(monitor='val_loss',\n",
-    "                                            patience=3,\n",
-    "                                            restore_best_weights=True)"
+    "  \n",
+    "@torch.no_grad()\n",
+    "def evaluate(model, val_loader):\n",
+    "    model.eval()\n",
+    "    outputs = [model.validation_step(batch) for batch in val_loader]\n",
+    "    return model.validation_epoch_end(outputs)\n",
+    "\n",
+    "  \n",
+    "def fit(epochs, lr, model, train_loader, val_loader, opt_func = torch.optim.SGD):\n",
+    "    \n",
+    "    history = []\n",
+    "    optimizer = opt_func(model.parameters(),lr)\n",
+    "    for epoch in range(epochs):\n",
+    "        \n",
+    "        model.train()\n",
+    "        train_losses = []\n",
+    "        for batch in train_loader:\n",
+    "            loss = model.training_step(batch)\n",
+    "            train_losses.append(loss)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "        result = evaluate(model, val_loader)\n",
+    "        result['train_loss'] = torch.stack(train_losses).mean().item()\n",
+    "        model.epoch_end(epoch, result)\n",
+    "        history.append(result)\n",
+    "    \n",
+    "    return history"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ImageClassificationBase(nn.Module):\n",
+    "    \n",
+    "    def training_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                  # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels) # Calculate loss\n",
+    "        return loss\n",
+    "    \n",
+    "    def validation_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)                    # Generate predictions\n",
+    "        loss = F.cross_entropy(out, labels)   # Calculate loss\n",
+    "        acc = accuracy(out, labels)           # Calculate accuracy\n",
+    "        return {'val_loss': loss.detach(), 'val_acc': acc}\n",
+    "        \n",
+    "    def validation_epoch_end(self, outputs):\n",
+    "        batch_losses = [x['val_loss'] for x in outputs]\n",
+    "        epoch_loss = torch.stack(batch_losses).mean()   # Combine losses\n",
+    "        batch_accs = [x['val_acc'] for x in outputs]\n",
+    "        epoch_acc = torch.stack(batch_accs).mean()      # Combine accuracies\n",
+    "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+    "    \n",
+    "    def epoch_end(self, epoch, result):\n",
+    "        print(\"Epoch [{}], train_loss: {:.4f}, val_loss: {:.4f}, val_acc: {:.4f}\".format(\n",
+    "            epoch, result['train_loss'], result['val_loss'], result['val_acc']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NaturalSceneClassification(ImageClassificationBase):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.network = nn.Sequential(\n",
+    "            nn.Conv2d(12, 32, kernel_size=3, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(128, 128, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            nn.Conv2d(128, 256, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(256, 256, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(2, 2),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(256 * 250 * 250, 1024),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(1024, 512),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(512, 6)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, xb):\n",
+    "        return self.network(xb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n",
-      "(4000, 4000, 3)\n"
+     "ename": "TypeError",
+     "evalue": "Module.parameters() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/tinas/Documents/machine learning challenege/challenge.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m model \u001b[39m=\u001b[39m ImageClassificationBase\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#fitting the model on training data and record the result after each epoch\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m history \u001b[39m=\u001b[39m fit(num_epochs, lr, model,train_loader\u001b[39m=\u001b[39;49m(X_train, y_train), val_loader\u001b[39m=\u001b[39;49m (X_val, y_val))\n",
+      "\u001b[1;32m/Users/tinas/Documents/machine learning challenege/challenge.ipynb Cell 19\u001b[0m in \u001b[0;36mfit\u001b[0;34m(epochs, lr, model, train_loader, val_loader, opt_func)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(epochs, lr, model, train_loader, val_loader, opt_func \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39moptim\u001b[39m.\u001b[39mSGD):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     history \u001b[39m=\u001b[39m []\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     optimizer \u001b[39m=\u001b[39m opt_func(model\u001b[39m.\u001b[39;49mparameters(),lr)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/tinas/Documents/machine%20learning%20challenege/challenge.ipynb#X33sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m         model\u001b[39m.\u001b[39mtrain()\n",
+      "\u001b[0;31mTypeError\u001b[0m: Module.parameters() missing 1 required positional argument: 'self'"
      ]
     }
    ],
    "source": [
-    "im = cv2.imread('agtuary-ml/B02.tif')\n",
-    "print(type(im))\n",
-    "print(im.shape)"
+    "num_epochs = 30\n",
+    "lr = 0.001\n",
+    "opt_func = torch.optim.Adam\n",
+    "model = ImageClassificationBase\n",
+    "#fitting the model on training data and record the result after each epoch\n",
+    "history = fit(num_epochs, lr, model,train_loader=(X_train, y_train), val_loader= (X_val, y_val))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. Convolution layer\n",
-    "- extract features in data using filters, computing dot product and stored into transfer map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.10.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1428,12 +1464,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
